@@ -18,6 +18,8 @@ Revision history for Perl extension RPi::WiringPi.
           unregistered
         - tests that require sudo now use the library in blib as opposed to the
           installed versions (fixes #164)
+        - add SYNOPSIS in Meta and add new section for shared storage in FAQ
+          (closes #140)
 
 2.3633_03 2019-11-18
         - added rpi_sudo_check() in RPiTest. All test files that sudo needs to
